--- a/In_Class_Assignment_1/styles.css
+++ b/In_Class_Assignment_1/styles.css
@@ -1,12 +1,23 @@
-
+*{
+    color: green;
+}
 h1{
-    color:green;
+    color:darkolivegreen;
     text-align:center;
 }
 p{
     font-size: 16px;
     line-height: 1.6;
+    text-align: center;
 }
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
 
 .highlight{
     background-color: lightgreen;
