--- a/In Class Assignment 9/react-three-cards/src/Card.css
+++ b/In Class Assignment 9/react-three-cards/src/Card.css
@@ -7,3 +7,8 @@
     color: aliceblue;
     margin: 10px;
 }
+
+.card:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+}
